<resources>
    <string name="app_name">MotoR</string>
    <string name="app_version">Motor 0.2</string>
    <string name="app_website">Witryna internetowa</string>
    <string name="app_website_href">http://motor.tomaszstrzelecki.com.pl</string>
    <string name="app_policy_website">Polityka prywatności aplikacji</string>
    <string name="app_policy_website_href">http://tomaszstrzelecki.com.pl/motor-polityka-prywatnosci</string>
    <string name="app_description">Motorcyclist Rescue App</string>
    <string name="app_short_description">(MotoRApp Alfa)</string>
    <string name="app_sugestion_description">Masz pomysł na nową funkcjonalność?</string>
    <string name="app_sugestion_mail">motor@tomaszstrzelecki.com.pl</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_about">O aplikacji</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="action_routes">Trasy</string>
    <string name="action_exit">Zakończ</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_physics_header">MotoR Physics</string>
    <string name="pref_title_physics">Ochrona motocyklisty</string>
    <string name="pref_title_physics_summary">Wykrywa sytuacje wypadkowe i wysyła
        wiadomość alarmową pod zdefiniowany numer ICE (Opcja testowa - może nie działać poprawnie)</string>
    <string name="pref_title_alarm_number">Numer ICE</string>
    <string name="pref_default_alarm_number">Numer telefonu ICE</string>
    <string name="pref_title_physics_save_acc_gyr">Zapisuj dane MotoR Physics</string>
    <string name="pref_title_physics_save_acc_gyr_summary">Zapisuje pomiary akcelerometru i żyroskopu
        w pamięci wewnętrznej telefonu w katalogu /motor/physics</string>

    <string name="pref_title_period_message">Okres wysyłania wiadomości alarmowej</string>
    <string name="pref_title_period_message_summary">Definiuje co jaki czas ma być wysyłana wiadomość alarmowa po wykryciu wypadku</string>
    <string-array name="pref_title_delay_period_message">
        <item>30 sekund (domyslnie)</item>
        <item>60 sekund</item>
        <item>90 sekund</item>
        <item>120 sekund</item>
    </string-array>
    <string-array name="pref_title_delay_period_message_values">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

    <string name="pref_title_period">Częstotliwość pomiarów</string>
    <string name="pref_title_period_summary">Zwiększona częstotliwość pomiarów może znacząco wpłynąć na zużycie baterii urządzenia</string>
    <string-array name="pref_title_delay_period">
        <item>Normalna (domyślna)</item>
        <item>Częsta</item>
        <item>W czasie rzeczywistym</item>
    </string-array>
    <string-array name="pref_title_delay_period_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_acc_sensitivity">Czułość akcelerometru</string>
    <string name="pref_title_acc_sensitivity_summary">Dobierz czułość w celu uniknięcia wysyłania fałszywych wiadomości alarmowych</string>
    <string-array name="pref_title_acc_sensitivity_label">
        <item>Normalna</item>
        <item>Średnia (domyślna)</item>
        <item>Ekstremalna</item>
        <item>Testowa</item>
    </string-array>
    <string-array name="pref_title_acc_sensitivity_values">
        <item>30</item>
        <item>25</item>
        <item>20</item>
        <item>10</item>
    </string-array>

    <string name="pref_title_gyr_sensitivity">Czułość żyroskopu</string>
    <string name="pref_title_gyr_sensitivity_summary">Dobierz czułość w celu uniknięcia wysyłania fałszywych wiadomości alarmowych</string>
    <string-array name="pref_title_gyr_sensitivity_label">
        <item>Normalna</item>
        <item>Średnia (domyślna)</item>
        <item>Ekstremalna</item>
        <item>Testowa</item>
    </string-array>
    <string-array name="pref_title_gyr_sensitivity_values">
        <item>30</item>
        <item>20</item>
        <item>10</item>
        <item>5</item>
    </string-array>

    <!-- Settings for auto messages -->
    <string name="pref_header_auto_messages">Auto SMS</string>
    <string name="pref_title_auto_sending">Wysyłaj automatyczną wiadomość</string>
    <string name="pref_title_auto_sending_summary">Automatycznie wysyła wiadomość dla połączeń
        nieodebranych i smsów w trakcie monitorowania</string>
    <string name="pref_title_auto_sending_to_all">Wysyłaj tylko do listy kontaktów</string>
    <string name="pref_title_add_localization_to_message">Dodaj aktualną lokalizację</string>
    <string name="pref_title_add_localization_to_message_summary">Dodaje do automatycznej wiadomości
        Twoją aktualną lokalizację z linkiem do Google Maps</string>
    <string name="default_signature">Tutaj wpisz swój podpis</string>
    <string name="pref_title_add_signature_to_message">Dodaj podpis do wiadomości</string>
    <string name="pref_title_add_signature_to_message_summary">Możesz dodać swój indywidualny podpis
        do wiadomości automatycznych</string>
    <string name="pref_title_signature">Treść podpisu wiadomości</string>
    <string name="pref_title_remove_polish_signs">Wiadomości bez polskich znaków</string>
    <string name="pref_title_remove_polish_signs_summary">Włącz aby wiadomości automatyczne
        nie zawierały polskich znaków</string>

    <!-- Example settings for next functions -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Strings of UI layout labels -->
    <string name="latitudeLabel">Szerokość geo:</string>
    <string name="longitudeLabel">Długość geo:</string>
    <string name="numberOfSatellitesLabel">Ilość satelit:</string>
    <string name="currentSpeedLabel">Prędkość:</string>
    <string name="cityLabel">Miasto:</string>
    <string name="postalCodeLabel">Kod pocztowy:</string>
    <string name="actionGps">Ustawienia GPS</string>
    <string name="actionShare">Podziel się aplikacją</string>
    <string name="streetLabel">Ulica:</string>
    <string name="current_gps_position">Aktualna pozycja GPS</string>
    <string name="monitoring_label">Monitorowanie jazdy</string>
    <string name="main_button_text_start">Start</string>
    <string name="main_button_text_stop">Stop</string>
    <string name="not_available">Niedostępne</string>
    <string name="searching">Szukam…</string>
    <string name="using">"używa: "</string>
    <string name="available">" dostępne: "</string>
    <string name="delete_all_tracks">Usuń wszystkie trasy</string>
    <string name="title_activity_routes">Ostatnie trasy</string>
    <string name="title_activity_maps">Trasa na mapie</string>
    <string name="title_thanks">Specjalne podziękowania</string>
    <string name="changelog">Changelog</string>
    <string name="action_test_alarm">Test Alarmu</string>
    <string name="no_localization_rights">Brak uprawnień do usług lokalizacji</string>
    <string name="gps_prepare_device">Gdy poczujesz wibrację, schowaj urządzenie do kieszeni</string>
    <string name="gps_localization_found">Znaleziono lokalizację. Schowaj urządzenie.</string>
    <string name="alarm_summary">Jeśli wszystko w porządku naciśnij czerwony przycisk</string>
    <string name="alarm_label">Alarm wypadkowy</string>

</resources>