<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="physics_general"
        android:summary="@string/pref_title_physics_summary"
        android:title="@string/pref_title_physics"
        />

    <EditTextPreference
        android:defaultValue="@string/pref_default_alarm_number"
        android:inputType="number"
        android:key="physics_telephone_number"
        android:maxLines="1"
        android:maxLength="20"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_alarm_number"
        android:dependency="physics_general"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="physics_save_acc_gyr"
        android:title="@string/pref_title_physics_save_acc_gyr"
        android:summary="@string/pref_title_physics_save_acc_gyr_summary"
        android:dependency="physics_general"/>

    <ListPreference
        android:defaultValue="30"
        android:entries="@array/pref_title_delay_period_message"
        android:entryValues="@array/pref_title_delay_period_message_values"
        android:key="physics_message_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_period_message"
        android:summary="@string/pref_title_period_message_summary"
        android:dependency="physics_general"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_title_delay_period"
        android:entryValues="@array/pref_title_delay_period_values"
        android:key="physics_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_period"
        android:summary="@string/pref_title_period_summary"
        android:dependency="physics_general"/>

    <ListPreference
        android:defaultValue="25"
        android:entries="@array/pref_title_acc_sensitivity_label"
        android:entryValues="@array/pref_title_acc_sensitivity_values"
        android:key="acc_sensitivity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_acc_sensitivity"
        android:summary="@string/pref_title_acc_sensitivity_summary"
        android:dependency="physics_general"/>

    <ListPreference
        android:defaultValue="20"
        android:entries="@array/pref_title_gyr_sensitivity_label"
        android:entryValues="@array/pref_title_gyr_sensitivity_values"
        android:key="gyr_sensitivity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_gyr_sensitivity"
        android:summary="@string/pref_title_gyr_sensitivity_summary"
        android:dependency="physics_general"/>

</PreferenceScreen>
