<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.strzelcu.motor.MainActivity">
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_gps_fixed_white_24dp"
        android:orderInCategory="1"
        android:title="@string/actionGps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_routes"
        android:orderInCategory="98"
        android:title="@string/action_routes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
